# tedla-shared-NLP

./: .flake8  README.md  combine_results.bat  launcher.py  main.py  run.bat
.claude/: settings.local.json
tedla-hypertension-project-databricks/: .gitignore  Example.html  ProjectSummary.md  README.md  SearchTermDetails.md  data-dictionary.html  data-dictionary.md  databricks.yml  meetrics.json  notes.md  pyproject.toml  pyrightconfig.json  tasks.py  tedla-hypertension-project-databricks.code-workspace
tedla-hypertension-project-databricks/.models/: en_core_web_sm-3.7.1.tar.gz.partaa  en_core_web_sm-3.7.1.tar.gz.partab  en_core_web_sm-3.7.1.tar.gz.partac  en_core_web_sm-3.7.1.tar.gz.partad  en_core_web_sm-3.7.1.tar.gz.partae  en_core_web_sm-3.7.1.tar.gz.partaf  en_core_web_sm-3.7.1.tar.gz.partag  en_core_web_sm-3.7.1.tar.gz.partah  en_core_web_sm-3.7.1.tar.gz.partai  en_core_web_sm-3.7.1.tar.gz.partaj  en_core_web_sm-3.7.1.tar.gz.partak  en_core_web_sm-3.7.1.tar.gz.partal  en_core_web_sm-3.7.1.tar.gz.partam
tedla-hypertension-project-databricks/.scripts/: combine_results.sh  combining_Y24.py  search_terms.txt
tedla-hypertension-project-databricks/notebooks/: 2_25_26__review_updated_data.ipynb  export_data_review.ipynb  extraction_details.csv  install_log_databricks.md  test_processing.ipynb
tedla-hypertension-project-databricks/src/: transfer_notes.md
tedla-hypertension-project-databricks/src/__archive/: downloader.py
tedla-hypertension-project-databricks/src/_sql/: results.sql
tedla-hypertension-project-databricks/tests/: test_token_window.py
(+113 files in other folders)
